samples/_failures_safe/1761460234_891c02_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4482b99f.c: In function ‘main’:
./samples/SAFE/__tmp_4482b99f.c:144:5: error: expected expression at end of input
  144 |     if (input_size == 0)
      |     ^~
./samples/SAFE/__tmp_4482b99f.c:144:5: error: expected declaration or statement at end of input
